# pipclient-tokenize

./: Cargo.toml  README.md  build.rs
python_code/: .gitignore  README.md  __init__.py  setup.py
python_code/simple_tokenize/: __init__.py
src/: lib.rs  main.rs
