[package]
name = "pipclient-tokenize"
version = "0.1.0"
authors = ["Sam Vevang <sam.vevang@gmail.com>"]

[build-dependencies.python-sys]
path = "../rust-cpython/python-sys"

[dependencies.python-sys]
path = "../rust-cpython/python-sys"

[build-dependencies.cpython]
#git = 'https://github.com/svevang/rust-cpython.git'
#features = ["build-python-3-5-0"]
path = "../rust-cpython"

[dependencies.cpython]
path = "../rust-cpython"
features = ["build-python-3-5-0"]
